cmake_minimum_required (VERSION 2.8)
project(ebftpd)
include ("../../cmake/Defaults.cmake")
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Os -DEXTERNAL_TOOL")
include_directories (${SERVER_SRC} ../../util)
add_executable (index index.cpp)
add_dependencies(index version cb util)
target_link_libraries(index eb util ${ALL_LIBRARIES})
install(TARGETS index RUNTIME DESTINATION bin)

