cmake_minimum_required (VERSION 2.8)
project(ebftpd)
include ("../../cmake/Defaults.cmake")
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Os")
include_directories (${SERVER_SRC} ../../util)
add_executable (nuke nuke.cpp)
add_dependencies(nuke version cb util)
target_link_libraries(nuke eb util ${ALL_LIBRARIES})
install(TARGETS nuke RUNTIME DESTINATION bin)
