cmake_minimum_required (VERSION 2.8)
project(ebftpd)
include ("../../cmake/Defaults.cmake")
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Os")
include_directories (src ${SERVER_SRC} ../../util)
add_executable (who who.cpp)
add_dependencies(who version)
target_link_libraries(who eb util ${ALL_LIBRARIES})
install(TARGETS who RUNTIME DESTINATION bin)
